# Skillbox

skillbox-14/Task-1/: main.cpp
skillbox-14/Task-2/: main.cpp
skillbox-14/Task-5/: main.cpp
skillbox-14/Task-6/: main.cpp
skillbox-14/Task-7/: main.cpp
skillbox-14/Task-8/: main.cpp
skillbox-16/Task-1/: main.cpp
skillbox-16/Task-2/: main.cpp
skillbox-16/Task-3/: main.cpp
skillbox-16/Task-4/: main.cpp
skillbox-16/Task-5/: main.cpp
skillbox-17/Task-1/: main.cpp
skillbox-17/Task-2/: main.cpp
skillbox-17/Task-3/: main.cpp
skillbox-18/Task-1/: main.cpp
skillbox-18/Task-2/: main.cpp
skillbox-18/Task-3/: main.cpp
skillbox-19/Task-1/: main.cpp  words.txt
skillbox-19/Task-2/: example.txt  main.cpp
skillbox-19/Task-3/: main.cpp  statement.txt
skillbox-19/Task-4/: main.cpp
skillbox-19/Task-5/: main.cpp
skillbox-19/Task-5/Answers/: 3.txt  7.txt
skillbox-20/Task-1/: main.cpp  statement.txt
skillbox-20/Task-2/: main.cpp  pic.txt
skillbox-20/Task-3/: basket.txt  main.cpp
skillbox-20/Task-4/: main.cpp
skillbox-21/Task-1/: main.cpp  statement.txt
skillbox-21/Task-2/: main.cpp
skillbox-21/Task-3/: main.cpp
skillbox-21/Task-4/: main.cpp
skillbox-22/Task-1/: main.cpp
skillbox-22/Task-2/: main.cpp
skillbox-22/Task-3/: main.cpp
skillbox-25/Task-1/: CMakeLists.txt
skillbox-25/Task-1/src/: CMakeLists.txt  main.cpp  operations.cpp  point.cpp
skillbox-25/Task-2/: CMakeLists.txt
skillbox-25/Task-2/include/: disk.h  ram.h
skillbox-25/Task-2/src/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  main.cpp  ram.cpp
skillbox-26/Task-1/: CMakeLists.txt
skillbox-26/Task-2/: CMakeLists.txt
skillbox-26/Task-3/: CMakeLists.txt
skillbox-27/Task-1/: CMakeLists.txt
skillbox-27/Task-2/: CMakeLists.txt
skillbox-27/Task-3/: CMakeLists.txt
skillbox-28/Task-1/: CMakeLists.txt
skillbox-28/Task-2/: CMakeLists.txt
skillbox-28/Task-3/: CMakeLists.txt
skillbox-29/Task-1/: CMakeLists.txt
skillbox-29/Task-2/: CMakeLists.txt
skillbox-30/Task-1/: CMakeLists.txt
skillbox-30/Task-1/src/: main.cpp
skillbox-30/Task-2/: CMakeLists.txt
skillbox-30/Task-2/src/: main.cpp
skillbox-30/Task-3/: CMakeLists.txt
skillbox-30/Task-3/src/: main.cpp
skillbox-31/Task-1/: CMakeLists.txt
skillbox-31/Task-2/: CMakeLists.txt
skillbox-31/Task-3/: CMakeLists.txt
skillbox-31/Task-3/include/: igraph.h  listGraph.h  matrixGraph.h
skillbox-31/Task-3/src/: CMakeLists.txt  igraph.cpp  listGraph.cpp  main.cpp  matrixGraph.cpp
skillbox-32/: .gitignore
skillbox-32/Task-1/: CMakeLists.txt  Oppenheimer.json
skillbox-32/Task-2/: CMakeLists.txt  Films.json
skillbox-32/Task-2/include/: movie.h
skillbox-32/Task-2/src/: main.cpp  movie.cpp
skillbox-32/Task-3/: company.pb.cc  company.pb.h  company.proto
skillbox-33/task-1/: CMakeLists.txt
skillbox-33/task-2/: CMakeLists.txt
skillbox-33/task-3/: CMakeLists.txt
skillbox-33/task-4/: CMakeLists.txt
skillbox-35/task-1/: CMakeLists.txt
skillbox-35/task-2/: CMakeLists.txt
skillbox-35/task-3/: CMakeLists.txt
(+40 files in other folders)
